# AED_NFL

./: Readme.md  pyproject.toml
.github/workflows/: Extract_and_Clear.yml  codeql.yml
Analysis/Passing/: Passing_Player.ipynb  requirements_analysis_passing.txt
Cleaning/: Dict_Passing.md  Passing_Union_Clear.ipynb
Cleaning/Passing/: Passing_Union_Clear.ipynb  requirements_cleaning_passing.txt
Data/Data_For_Cleaning/Passing/: PASSING_CLEAR.csv
Data/Data_For_Extract/Passing/: PASSING2010.csv  PASSING2011.csv  PASSING2012.csv  PASSING2013.csv  PASSING2014.csv  PASSING2015.csv  PASSING2016.csv  PASSING2017.csv  PASSING2018.csv  PASSING2019.csv  PASSING2020.csv  PASSING2021.csv  PASSING2022.csv
Extract/Passing/: Passing_Extract.ipynb  requirements_extract_passing.txt
